--- a/pmem/Cargo.toml
+++ b/pmem/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-thiserror = "1.0.61"
+thiserror = { workspace = true }
 pmem-derive = { workspace = true }
 
 [dev-dependencies]
