--- a/rfs/Cargo.toml
+++ b/rfs/Cargo.toml
@@ -11,5 +11,5 @@ thiserror = { workspace = true }
 async-trait = "0.1.81"
 tokio = { version = "1.38.1", features = ["macros", "rt-multi-thread"] }
 nfsserve = "0.10.2"
-tracing-subscriber = "0.3.18"
+tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
 tracing = "0.1.40"
