--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,5 @@ pmem-derive = { path = "pmem-derive" }
 thiserror = "1.0.61"
 proptest = "1.0.0"
 tempfile = "3.10.1"
+rand = "0.8.5"
+tango-bench = "0.5.0"
