--- a/rfs/Cargo.toml
+++ b/rfs/Cargo.toml
@@ -16,3 +16,9 @@ tracing = "0.1.40"
 [dev-dependencies]
 proptest = { workspace = true }
 tempfile = { workspace = true }
+rand = { workspace = true, features = ["small_rng"] }
+tango-bench = { workspace = true }
+
+[[bench]]
+name = "rfs"
+harness = false
