Renaming rfs to rfs-bench for compatibility with cargo export

--- a/rfs/Cargo.toml
+++ b/rfs/Cargo.toml
@@ -20,5 +20,5 @@ rand = { workspace = true, features = ["small_rng"] }
 tango-bench = { workspace = true }
 
 [[bench]]
-name = "rfs"
+name = "rfs-bench"
 harness = false
