--- a/.github/workflows/bench.yaml
+++ b/.github/workflows/bench.yaml
@@ -20,10 +20,10 @@ jobs:
       - name: Building Benchmarks
         run: |
           cargo export target/benchmarks -- bench --bench=page
-          cargo export target/benchmarks -- bench --bench=rfs
+          cargo export target/benchmarks -- bench --bench=rfs-bench
           cd baseline-branch
           cargo export target/benchmarks -- bench --bench=page
-          cargo export target/benchmarks -- bench --bench=rfs
+          cargo export target/benchmarks -- bench --bench=rfs-bench
 
       - name: Run Benchmarks
         run: |
@@ -32,7 +32,7 @@ jobs:
           cat /dev/null > target/benchmark.txt
           target/benchmarks/page --color=never compare baseline-branch/target/benchmarks/page \
             -v -t 1 --fail-threshold 10 | tee -a target/benchmark.txt
-          target/benchmarks/rfs --color=never compare baseline-branch/target/benchmarks/rfs \
+          target/benchmarks/rfs_bench --color=never compare baseline-branch/target/benchmarks/rfs_bench \
             -v -t 1 --fail-threshold 10 | tee -a target/benchmark.txt
 
       - uses: actions/upload-artifact@v3
