RFS calculating changes between snapshots (#3)
- running RFS benchmarks in CI
- fixing recursive Drop in `memory-non-blocking-read`
- `PagePool::commit()`, `Memory::commit()` not returns LSN
- added `PagePool::snapshot_at()` for reading previous snapshots
- `Filesystem:: changes_from()` implemented that calculates the diff between two `Filesystem` instances
- protests on change calculation added
- REPL for committing and views changes added to `rfs` binary (commands: `commit` and exit)

--- a/.github/workflows/bench.yaml
+++ b/.github/workflows/bench.yaml
@@ -27,8 +27,9 @@ jobs:
         run: |
           set -eo pipefail
 
+          cat /dev/null > target/benchmark.txt
           target/benchmarks/page --color=never compare baseline-branch/target/benchmarks/page \
-            -v -t 1 --fail-threshold 10 | tee target/benchmark.txt
+            -v -t 1 --fail-threshold 10 | tee -a target/benchmark.txt
 
       - uses: actions/upload-artifact@v3
         with:
