--- a/pmem/Cargo.toml
+++ b/pmem/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 thiserror = { workspace = true }
 pmem-derive = { workspace = true }
 arc-swap = "1.7.1"
+tokio = { version = "1.39.2", features = ["sync", "macros", "rt"] }
 
 [dev-dependencies]
 fatfs = "0.3.6"
