--- a/pmem/Cargo.toml
+++ b/pmem/Cargo.toml
@@ -7,10 +7,13 @@ edition = "2021"
 thiserror = { workspace = true }
 pmem-derive = { workspace = true }
 arc-swap = { workspace = true }
+
+# The only reason we need tokio in this crate this is Notify struct used in
+# PagePool to notify the background thread about new snapshots.
+# If you're able to replace it with something more lightweight, please do
 tokio = { workspace = true, features = ["sync", "macros", "rt"] }
 
 [dev-dependencies]
-fatfs = "0.3.6"
 proptest = "1.0.0"
 rand = { workspace = true, features = ["small_rng"] }
 tango-bench = { workspace = true }
