--- a/replication/Cargo.toml
+++ b/replication/Cargo.toml
@@ -4,3 +4,6 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+byteorder = "1.5.0"
+pmem = { workspace = true }
+tokio = { workspace = true }
