Tx commit notifications (#4)
arbitrary_read         [ 395.6 ns ... 399.1 ns ]      +0.90%*
arbitrary_write        [  87.9 ns ...  87.8 ns ]      -0.04%
write_commit           [  88.2 ns ... 136.4 ns ]     +54.53%*

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,17 @@
 [workspace]
 resolver = "2"
-members = ["pmem", "pmem-derive", "rfs"]
+members = ["pmem", "pmem-derive", "replication", "rfs"]
 
 [workspace.dependencies]
 pmem-derive = { path = "pmem-derive" }
+pmem = { path = "pmem" }
+rfs = { path = "rfs" }
+replication = { path = "replication" }
+
 thiserror = "1.0.61"
 proptest = "1.0.0"
 tempfile = "3.10.1"
 rand = "0.8.5"
 tango-bench = "0.5.0"
+arc-swap = "1.7.1"
+tokio = "1.39.2"
