--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,5 @@ rand = "0.8.5"
 tango-bench = "0.5.0"
 arc-swap = "1.7.1"
 tokio = "1.39.2"
+tracing-subscriber = { version = "0.3.18" }
+tracing = "0.1.40"
