--- a/replication/Cargo.toml
+++ b/replication/Cargo.toml
@@ -6,3 +6,7 @@ edition = "2021"
 [dependencies]
 pmem = { workspace = true }
 tokio = { workspace = true, features = ["net", "io-util", "macros"] }
+tracing = { workspace = true }
+
+[dev-dependencies]
+tracing-subscriber = { workspace = true, features = ["env-filter"] }
