--- a/replication/Cargo.toml
+++ b/replication/Cargo.toml
@@ -5,7 +5,13 @@ edition = "2021"
 
 [dependencies]
 pmem = { workspace = true }
-tokio = { workspace = true, features = ["net", "io-util", "macros"] }
+tokio = { workspace = true, features = [
+    "net",
+    "io-util",
+    "macros",
+    "rt",
+    "sync",
+] }
 tracing = { workspace = true }
 
 [dev-dependencies]
