Initial replication support (#5)
This PR adds initial replication support.

Changes:

- `arc_swap` and `tokio` are removed from pmem crate
- `PagePool` consistency is based on `Mutex` now
- `PagePool:: snapshot_at()` is returning `CommitedSnapshot` instead of `Snapshot` now
- `PagePoolHandle` added
- multithreaded test on `PagePool` added

Replication module added with following limitations:

- commit pool handle should be created before first changes are committed
- full redo log is replicated

arbitrary_read   [ 402.5 ns ... 405.7 ns ]      +0.78%*
arbitrary_write  [  87.4 ns ...  87.1 ns ]      -0.34%
write_commit     [  92.9 ns ... 102.7 ns ]     +10.47%*

--- a/replication/Cargo.toml
+++ b/replication/Cargo.toml
@@ -5,4 +5,14 @@ edition = "2021"
 
 [dependencies]
 pmem = { workspace = true }
-tokio = { workspace = true, features = ["net", "io-util", "macros"] }
+tokio = { workspace = true, features = [
+    "net",
+    "io-util",
+    "macros",
+    "rt",
+    "sync",
+] }
+tracing = { workspace = true }
+
+[dev-dependencies]
+tracing-subscriber = { workspace = true, features = ["env-filter"] }
