--- a/pmem/Cargo.toml
+++ b/pmem/Cargo.toml
@@ -12,6 +12,7 @@ arc-swap = { workspace = true }
 proptest = "1.0.0"
 rand = { workspace = true, features = ["small_rng"] }
 tango-bench = { workspace = true }
+tempfile.workspace = true
 
 [[bench]]
 name = "page"
