Persistent snapshots initial support (#6)
- `PagePool` -> `Volume`
- `PageDriver`/`FileDriver` added
- `Snapshot` -> `Transaction`
- `CommitedSnapshot` -> `Snapshot`
- Volume has undo log (`UndoEntry`)
- Volume operates on page snapshots + undo log, not commit logs to read current version of data
- tests on transaction isolation

arbitrary_read  [ 595.7 ns ... 125.3 ns ]  -78.97%*
arbitrary_write [ 126.1 ns ... 125.7 ns ]   -0.36%
write_commit    [ 164.6 ns ... 852.7 ns ] +417.89%*

--- a/pmem/Cargo.toml
+++ b/pmem/Cargo.toml
@@ -6,12 +6,13 @@ edition = "2021"
 [dependencies]
 thiserror = { workspace = true }
 pmem-derive = { workspace = true }
+arc-swap = { workspace = true }
 
 [dev-dependencies]
 proptest = "1.0.0"
 rand = { workspace = true, features = ["small_rng"] }
 tango-bench = { workspace = true }
-arc-swap = { workspace = true }
+tempfile.workspace = true
 
 [[bench]]
 name = "page"
