--- a/pmem/Cargo.toml
+++ b/pmem/Cargo.toml
@@ -14,6 +14,7 @@ proptest = "1.0.0"
 rand = { workspace = true, features = ["small_rng"] }
 tango-bench = { workspace = true }
 tempfile.workspace = true
+test-utils.workspace = true
 
 [[bench]]
 name = "page"
