--- a/rfs/Cargo.toml
+++ b/rfs/Cargo.toml
@@ -13,6 +13,8 @@ tokio = { version = "1.38.1", features = ["macros", "rt-multi-thread"] }
 nfsserve = "0.10.2"
 tracing.workspace = true
 tracing-subscriber = { workspace = true, features = ["env-filter"] }
+# Only required for demonstration purposes
+sha2 = "0.10.8"
 
 [dev-dependencies]
 proptest = { workspace = true }
